# Juniorgram

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Database_Scheme.sql  Dockerfile  Doxyfile  README.md  ServerTestsStartUp.md  Workflow.md  azure-pipelines.yml  build.yml  conan.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conanfile_win.txt  conaninfo.txt  cpp.hint  docker-compose.yml  docker-pipeline.yml  graph_info.json  launcher.sh  rebase.txt  sonar-project.properties
Base/Base.Static/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp
Base/Base.Test/: CMakeLists.txt  FileLoggerTests.cpp
Client/: CMakeLists.txt
Client/Client.CLI/: App.cpp  App.hpp  CMakeLists.txt  MainClient.cpp
Client/Client.Core/: CMakeLists.txt
Client/Client.Mock/: CMakeLists.txt  MockClient.cpp  MockClient.hpp
Client/Client.Qt/: App.cpp  App.hpp  Application.cpp  Application.hpp  CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  ChatWindow.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Login.cpp  MainWidget.cpp  MainWidget.h  MainWidget.hpp  MessageWidget.cpp  MessageWidget.h  MessageWidget.hpp  Registration.cpp  Registration.h  Settings.cpp  Settings.hpp  SettingsWidget.cpp  SettingsWidget.hpp  TitleWidget.cpp  TitleWidget.hpp  app.cpp  app.h  login.cpp  login.h  login.hpp  login.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  pch.h  pch.hpp  (+10 more)
Client/Client.Test/: CMakeLists.txt  TestClient.cpp  TestClient.hpp  TestServerInfo.hpp
Client/Client.TestObject/: CMakeLists.txt  TestClient.cpp  TestClient.hpp  TestKernelInfo.hpp  TestServerInfo.hpp
DataAccess/: CMakeLists.txt
DataAccess/DataAccess.Debug/: CMakeLists.txt  FileDB.cpp  FileDB.hpp  FileRepository.cpp  FileRepository.hpp  mainFileDB.cpp
DataAccess/DataAccess.Mock/: CMakeLists.txt  MockDatabase.cpp  MockDatabase.hpp  MockDatabaseOptions.hpp  MockModelFiller.hpp  MockQuery.hpp  MockQueryBuilder.hpp  MockRepositories.cpp  MockRepositories.hpp  MockRepositoryInstance.hpp  MockRepositoryManager.hpp  MockRepositoryStorage.hpp
DataAccess/DataAccess.Postgre/: 1PostgreRepository.cpp  1PostgreRepository.hpp  CMakeLists.txt  DataBaseOptions.hpp  Models.hpp  PGModelFiller.hpp  PGModels.hpp  PostgreAdapter.cpp  PostgreAdapter.hpp  PostgreModel.cpp  PostgreModel.hpp  PostgreQuery.hpp  PostgreRepositories.cpp  PostgreRepositories.hpp  PostgreRepository.cpp  PostgreRepository.hpp  PostgreRepositoryContainer.hpp  PostgreRepositoryManager.hpp  PostgreServerRepository.hpp  PostgreTable.hpp  QueryBuilder.hpp  RepositoryUnits.hpp  SQLStatements.hpp  ServerRepositories.cpp  ServerRepositories.hpp  UsersAmountFinder.cpp  UsersAmountFinder.hpp
DataAccess/DataAccess.Repository/: CMakeLists.txt
DataAccess/DataAccess.SQLite/: CMakeLists.txt  ClientRepositories.hpp  LiteAdapter.cpp  LiteAdapter.hpp  LiteClientRepository.hpp  LiteRepositories.cpp  LiteRepositories.hpp  LiteRepositoryContainer.hpp  LiteTable.hpp
DataAccess/DataAccess.Static/: CMakeLists.txt  DataBaseOptions.hpp  DataBasePostgreSQL.hpp  DataBasePostgreSQLOperations.hpp  DatabaseAbstractionLayout.cpp  DatabaseAbstractionLayout.hpp  IAdapter.cpp  IAdapter.hpp  IRepository.cpp  IRepository.hpp  LiteAdapter.cpp  LiteAdapter.hpp  PostgreAbstractionLayout.cpp  PostgreAbstractionLayout.hpp  PostgreAdapter.cpp  PostgreAdapter.hpp  PostgreOperations.cpp  PostgreOperations.hpp  PostgreRepository.cpp  PostgreRepository.hpp  PostgreTable.hpp  QSQLCipherAdapter.cpp  QSQLCipherAdapter.hpp  QSQLCipherRepository.cpp  QSQLCipherRepository.hpp  QueryBuilder.hpp  RepositoryUnits.cpp  RepositoryUnits.hpp  SQLCipherAdapter.cpp  SQLCipherAdapter.hpp  SQLCipherRepository.cpp  SQLCipherRepository.hpp  SQLCipherTable.hpp  SQLStatements.hpp  SQLiteAdapter.cpp  SQLiteAdapter.hpp  Source1.cpp  UsersAmountFinder.hpp  UsersAmountFunctions.cpp  UsersAmountFunctions.hpp  (+1 more)
DataAccess/DataAccess.Test/: CMakeLists.txt  DataAccessTest.cpp  FileAdapterTest.cpp  FileDBTest.cpp  PostgreAdapterTest.cpp  PostgreModelsTest.cpp  PostgreQueryTest.cpp  PostgreRepositoriesContainerTest.cpp  PostgreRepositoriesTest.cpp  PostgreRepositoryManagerTest.cpp  PostgreTableTest.cpp  QueryBuilderTest.cpp  RepositoryFunctionsTest.cpp  RepositoryUnitsTest.cpp  TestPostgreRepository.hpp  TestRegistrationUnit.hpp  TestUsersAmountFinder.hpp  UsersAmountFinderTest.cpp  UsersAmountFunctions.hpp
DataAccess/Public/: CMakeLists.txt
DataBaseAPI/: CMakeLists.txt  mainDBAPI.cpp
DataBaseAPI/Headers/: DataBasePostgreSQL.h  DataBasePostgreSQL.hpp  IDB.h  IDB.hpp
DataBaseAPI/Sources/: PostgreSQL.cpp  PostgreSQLColumnOperations.cpp  PostgreSQLFieldOperations.cpp  PostgreSQLTableOperations.cpp
Gui_Qt/: CMakeLists.txt  Gui_Qt_en_150.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Kernel/Kernel.Exec/: CMakeLists.txt  MainKernel.cpp
Kernel/Kernel.Test/: ArgParserTests.cpp  CMakeLists.txt  KernelAutorizationTests.cpp  KernelChannelTests.cpp  KernelDefaultTests.cpp  KernelMessageTests.cpp  KernelSettingsManagerTests.cpp  KernelSettingsTests.cpp  KernelWorkflowTests.cpp
Network/Network.Static/: CMakeLists.txt  Connection.cpp  Connection.hpp  Message.cpp  Message.hpp  Primitives.cpp  Primitives.hpp  SafeQueue.cpp  SafeQueue.hpp  common.h  connection.h
Network/Network.Test/: BinarySerializeTest.cpp  CMakeLists.txt  CompressionHandlerTest.cpp  ConnectionTest.cpp  EncryptionHandlerTest.cpp  SerializationHandlerTest.cpp  TimestampTest.cpp
Network/Public/: CMakeLists.txt
Precompiled/Catch2/: CMakeLists.txt  CatchDummyTest.cpp
Server/Server.Exec/: ArgParser.hpp  ArgumentParser.h  CMakeLists.txt  KeysValidator.h  MainServer.cpp  deprecated_ArgumentParser.hpp  deprecated_KeysValidator.hpp
Server/Server.Test/: ArgParserTests.cpp  ArgumentParserTests.cpp  CMakeLists.txt  MessageFiller.cpp  (+25 more)
StressTest/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  Pipe.cpp  Pipe.hpp  SimpleTimer.cpp  SimpleTimer.hpp  Tester.cpp  Tester.hpp  main.cpp
client/: CMakeLists.txt  mainClient.cpp
serialization/: CMakeLists.txt
server/: CMakeLists.txt  mainServer.cpp
(+1311 files in other folders)
